# transat

./: .copier-answers.yml  Cargo.toml  LICENSE  README.md  justfile
.cargo/: audit.toml
src/: ecb.rs  main.rs  money.rs
src/ecb/: client.rs  endpoints.rs  models.rs
