[package]
name = "transat"
version = "0.1.0"
edition = "2024"
description = "A simple CLI for euro-dollar conversions based on official ECB rates."
repository = "https://github.com/vivienm/transat"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_complete = "4.6.3"
derive-where = "1.6.1"
jiff = { version = "0.2", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt"] }
tower = "0.5.3"
url = "2.5.8"
